--- a/app/views/reports/_report.html.erb
+++ b/app/views/reports/_report.html.erb
@@ -1,49 +1,42 @@
-         <table id="grouped-results">
-           <thead>
-             <tr>
-               <th rowspan="2" colspan="<%= @group_fields.size - 1 %>"></th>
-               <th rowspan="2"><%= @group_fields[-1].sub("_id","").sub("_"," ").capitalize %></th>
-<% if @fields.member? 'funds' %><th rowspan="2">Funds</th><% end %>
-<% if @fields.member? 'agency_other' %><th rowspan="2">Agency Other</th><% end %>
-<% if @fields.member? 'vehicle_maint' %><th rowspan="2">Vehicle Maint.</th><% end %>
-<% if @fields.member? 'administrative' %><th rowspan="2">Administrative</th><% end %>
-<% if @fields.member? 'operations' %><th rowspan="2">Operations</th><% end %>
-<% if @fields.member? 'donations' %><th rowspan="2">Donations</th><% end %>
-<% if @fields.member? 'fares' %><th rowspan="2">Fares</th><% end %>
-<% if @fields.member? 'total' %><th rowspan="2">Total</th><% end %>
-<% if @fields.member? 'in_district_trips' %><th rowspan="2">In District Rides</th><% end %>
-<% if @fields.member? 'out_of_district_trips' %><th rowspan="2">Out of District Rides</th><% end %>
-<% if @fields.member? 'total_trips' %><th rowspan="2">Total this Period</th><% end %>
-<% if @fields.member? 'total_last_year' %><th rowspan="2">Total this Period Last Year</th><% end %>
-<% if @fields.member? 'mileage' %><th rowspan="2">Mileage</th><% end %>
-<% if @fields['driver_hours'] > 0 %><th colspan="<%= @fields['driver_hours'] %>">Driver Hours</th><% end %>
-<% if @fields.member? 'cost_per_trip' %><th rowspan="2">Cost/Trip</th><% end %>
-<% if @fields.member? 'cost_per_mile' %><th rowspan="2">Cost/Mile</th><% end %>
-<% if @fields.member? 'cost_per_hour' %><th rowspan="2">Cost/Hour</th><% end %>
-<% if @fields.member? 'miles_per_ride' %><th rowspan="2">Miles/Ride</th><% end %>
-<% if @fields.member? 'turn_downs' %><th rowspan="2">Turn Downs</th><% end %>
-<% if @fields.member? 'undup_riders' %><th rowspan="2">Undup Riders</th><% end %>
-<% if @fields['volunteer_hours'] > 0 %><th colspan="<%= @fields['volunteer_hours'] %>">Volunteer Hours</th><% end %>
-             </tr>
-             <tr>
-<% if @fields.member? 'driver_volunteer_hours' %><th>Volunteer</th><% end %>
-<% if @fields.member? 'driver_paid_hours' %><th>Paid</th><% end %>
-<% if @fields.member? 'driver_total_hours' %><th>Total</th><% end %>
-<% if @fields.member? 'escort_volunteer_hours' %><th>Escort</th><% end %>
-<% if @fields.member? 'admin_volunteer_hours' %><th>Admin</th><% end %>
-<% if @fields.member? 'total_volunteer_hours' %><th>Total</th><% end %>
-             </tr>
-           </thead>
-           <tbody>
-	     <%= render :partial=> "nested_rows", :locals=>{:rows=>results, :group_fields=>group_fields} %>
-           </tbody>
-         </table>
-
-<!--[if !IE]><!-->
-  <script>
-  //<![CDATA[
-  $('#grouped-results tbody tr th:first-child').height($('#grouped-results tbody tr th:first-child span').width() * 2).width(15);
-  $('#grouped-results tbody tr th:first-child span').width(25);
-  //]]>
-  </script>
-<!--<![endif]-->
+<div class="table-wrapper">
+<table>
+  <thead>
+    <tr>
+      <th rowspan="2" colspan="<%= @group_fields.size - 1 %>"></th>
+      <th rowspan="2"><%= @group_fields[-1].sub("_id","").sub("_"," ").capitalize %></th>
+      <% if @fields.member? 'funds' %><th rowspan="2">Funds</th><% end %>
+      <% if @fields.member? 'agency_other' %><th rowspan="2">Agency Other</th><% end %>
+      <% if @fields.member? 'vehicle_maint' %><th rowspan="2">Vehicle Maint.</th><% end %>
+      <% if @fields.member? 'administrative' %><th rowspan="2">Administrative</th><% end %>
+      <% if @fields.member? 'operations' %><th rowspan="2">Operations</th><% end %>
+      <% if @fields.member? 'donations' %><th rowspan="2">Donations</th><% end %>
+      <% if @fields.member? 'fares' %><th rowspan="2">Fares</th><% end %>
+      <% if @fields.member? 'total' %><th rowspan="2">Total</th><% end %>
+      <% if @fields.member? 'in_district_trips' %><th rowspan="2">In District Rides</th><% end %>
+      <% if @fields.member? 'out_of_district_trips' %><th rowspan="2">Out of District Rides</th><% end %>
+      <% if @fields.member? 'total_trips' %><th rowspan="2">Total this Period</th><% end %>
+      <% if @fields.member? 'total_last_year' %><th rowspan="2">Total this Period Last Year</th><% end %>
+      <% if @fields.member? 'mileage' %><th rowspan="2">Mileage</th><% end %>
+      <% if @fields['driver_hours'] > 0 %><th colspan="<%= @fields['driver_hours'] %>">Driver Hours</th><% end %>
+      <% if @fields.member? 'cost_per_trip' %><th rowspan="2">Cost/Trip</th><% end %>
+      <% if @fields.member? 'cost_per_mile' %><th rowspan="2">Cost/Mile</th><% end %>
+      <% if @fields.member? 'cost_per_hour' %><th rowspan="2">Cost/Hour</th><% end %>
+      <% if @fields.member? 'miles_per_ride' %><th rowspan="2">Miles/Ride</th><% end %>
+      <% if @fields.member? 'turn_downs' %><th rowspan="2">Turn Downs</th><% end %>
+      <% if @fields.member? 'undup_riders' %><th rowspan="2">Undup Riders</th><% end %>
+      <% if @fields['volunteer_hours'] > 0 %><th colspan="<%= @fields['volunteer_hours'] %>">Volunteer Hours</th><% end %>
+    </tr>
+    <tr>
+      <% if @fields.member? 'driver_volunteer_hours' %><th>Volunteer</th><% end %>
+      <% if @fields.member? 'driver_paid_hours' %><th>Paid</th><% end %>
+      <% if @fields.member? 'driver_total_hours' %><th>Total</th><% end %>
+      <% if @fields.member? 'escort_volunteer_hours' %><th>Escort</th><% end %>
+      <% if @fields.member? 'admin_volunteer_hours' %><th>Admin</th><% end %>
+      <% if @fields.member? 'total_volunteer_hours' %><th>Total</th><% end %>
+    </tr>
+  </thead>
+  <tbody>
+<%= render :partial=> "nested_rows", :locals=>{:rows=>results, :group_fields=>group_fields} %>
+  </tbody>
+</table>
+</div>
