--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -10,46 +10,54 @@
 
 <h2 class="section-header"><%= report.name %></h2>
 
-<% if report.allocations.empty? %>
-All allocations
-<% else %>
-<ul>
-  <% for allocation in report.allocations %>
-  <li><%= allocation.name %></li>
+<p>
+  <% if report.allocations.empty? %>
+  All Allocations
+  <% else %>
+  <ul>
+    <% for allocation in report.allocations %>
+    <li><%= allocation.name %></li>
+    <% end %>
+  </ul>
   <% end %>
-</ul>
-<% end %>
-
-Fields:
-<% if report.fields.empty? %>
-All
-<% else %> 
-<%= report.fields.sort.join(", ") %>
-<% end %>
-
-Group by:
-<%= report.group_by %>
+  <span class="separator">|</span>
+  Fields:
+  <% if report.fields.empty? %>
+  All
+  <% else %> 
+  <%= report.fields.sort.join(", ") %>
+  <% end %>
+  <span class="separator">|</span>
+  Group By: <%= report.group_by %>
+</p>
 
 <form action="<%= url_for :action=>:report %>">
   <fieldset>
     <input type="hidden" name="report[id]" value="<%= report.id %>" />
-    <label for="report[start_date]">Start date</label><input type="text" name="report[start_date]" value="<%= @start_date %>" />
-    <label for="report[end_date]">End date</label><input type="text" name="report[end_date]" value="<%= @end_date %>" />
-
     <input type="hidden" name="report[adjustment]" value="0" />
     <input type="hidden" name="report[pending]" value="0" />
-    <label for="report[adjustment]">Adjustments?</label><input type="checkbox" name="report[adjustment]" value="1" />
-    <label for="report[pending]">Pending?</label><input type="checkbox" name="report[pending]" value="1" />
-    <input type="submit" name="commit" value="View Report"/>
+      <p>
+        <label for="report[start_date]">Start date:</label> <input type="text" name="report[start_date]" value="<%= @start_date %>" />
+        <label for="report[end_date]">End date:</label> <input type="text" name="report[end_date]" value="<%= @end_date %>" />
+      </p>
+      <div class="some-checkboxes">
+        <input type="checkbox" name="report[adjustment]" value="1" /> <label for="report[adjustment]">Adjustments?</label>
+        <input type="checkbox" name="report[pending]" value="1" /> <label for="report[pending]">Pending?</label>
+      </div>
+    </ol>
+    <div class="actions">
+      <input type="submit" name="commit" value="View Report"/>
+    </div>
   </fieldset>
 </form>
+
 <%= form_for report, :url=>{:action=>:delete_report} do |f| %>
-<input type="hidden" name="report[id]" value="<%= report.id %>" />
-<%= f.submit "Delete Report", :confirm=>"Are you sure you want to delete this report?" %>
+  <input type="hidden" name="report[id]" value="<%= report.id %>" />
+  <%= f.submit "Delete Report", :confirm=>"Are you sure you want to delete this report?" %>
 <% end %>
 
 <hr />
 
-<%= link_to 'Define New Report', { :action=>:show_create_report }, :class=>'action-bttn' %>
-
 <% end %>
+
+<%= link_to 'Define New Report', { :action=>:show_create_report }, :class=>'action-bttn' %>
