--- a/app/views/layouts/reports.html.erb
+++ b/app/views/layouts/reports.html.erb
@@ -1,11 +1,11 @@
 <% content_for :menu_bar do %>
         <ul id="subnav" class="selfclear">
-          <li><%= link_to "Create Report", :action=>:show_create_report %></li>
-          <li><%= link_to "Predefined Reports", :action=>:index %></li>
-          <li><%= link_to "Quarterly Narrative Report", :action=>:show_create_quarterly  %></li>
-          <li><%= link_to "Ride Purpose Report", :action=>:show_ride_purpose_report  %></li>
-          <li><%= link_to "A&E Report", :action=>:show_create_age_and_ethnicity  %></li>
-          <li><%= link_to "Active Rider Report", :action=>:show_create_active_rider  %></li>
+          <li><%= link_to "Predefined", :action=>:index %></li>
+          <li><%= link_to "Define New", :action=>:show_create_report %></li>
+          <li><%= link_to "Quarterly Narrative", :action=>:show_create_quarterly  %></li>
+          <li><%= link_to "Ride Purpose", :action=>:show_ride_purpose_report  %></li>
+          <li><%= link_to "A&E", :action=>:show_create_age_and_ethnicity  %></li>
+          <li><%= link_to "Active Rider", :action=>:show_create_active_rider  %></li>
         </ul>
 <% end %>
 
