--- a/app/views/reports/show_create_report.html.erb
+++ b/app/views/reports/show_create_report.html.erb
@@ -1,5 +1,5 @@
 <div id="page-header">
-  <h1>Create Report</h1>
+  <h1>Define New Report</h1>
 </div>
 
 <%= form_for @report, :html=>{:id=>"create-report", :method=>:post}, :url=>{:action=>"report"} do |f| %>
